--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo-image-manipulator": "~13.0.6",
     "expo-image-picker": "^16.0.5",
     "expo-status-bar": "~2.0.1",
+    "formik": "^2.4.6",
     "react": "18.3.1",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.20.2",
@@ -22,7 +23,8 @@
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-text-recognition": "^1.0.2",
-    "tesseract.js": "^6.0.0"
+    "tesseract.js": "^6.0.0",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
